# Embedded-Vision-Real-Time-Target-Tracking

./: README.md
sirrah_vision-sdiop_dev/: ConfigParam.cpp  Cross_Compilation_Guide_RaspberryPi5.docx  Decalage.py  Detect_centroids_leds.py  Display.py  Distanc_between_pixel_PP.py  Distance_Barycentre_with_umeyama.py  Distance_between_4_corners.py  Distance_between_centroide.py  ImageAcquisitionRAW.cpp  ImageRawOpenCV.py  Jitter.py  Jitter_Mean_Img_as_ref.py  README.md  Somme_Image.py  configParam.ini  frame_0.raw  histogramme.c  meson.build
sirrah_vision-sdiop_dev/Sirrah_Camera/: build.sh  clean.sh  meson.build  meson_options.txt  run_sirrah_demo.sh  run_test.sh
sirrah_vision-sdiop_dev/Sirrah_Camera/Camera_Acquisition/: RawCapture.cpp
sirrah_vision-sdiop_dev/Sirrah_Camera/Computing_Angle/: README.md  meson_options.txt  test_tcp_client.py
sirrah_vision-sdiop_dev/Sirrah_Camera/Computing_Angle/app/: main.cpp
sirrah_vision-sdiop_dev/Sirrah_Camera/Computing_Angle/include/: sra_angle_calculator.hpp  sra_angle_sender_tcp.hpp
sirrah_vision-sdiop_dev/Sirrah_Camera/Computing_Angle/src/: sra_angle_calculator.cpp  sra_angle_sender_tcp.cpp
sirrah_vision-sdiop_dev/Sirrah_Camera/Computing_Angle/tests/: sra_angle_calculator_test.cpp
sirrah_vision-sdiop_dev/Sirrah_Camera/Extraction_LED_coordinates/Image_Processing/: led_centroid.py
sirrah_vision-sdiop_dev/Sirrah_Camera/rpi5_cross/project/SIRRAH_CAMERA/: CMakeLists.txt  ConfigParam.cpp  build_and_send.sh  cross_rpi5.txt  link.sh  main.cpp  meson.build  pkg-config-wrapper.sh  sirrah_camera_1.0.0_20260107_154418_arm64.deb  sirrah_camera_1.0.0_20260107_155101_arm64.deb  sirrah_camera_1.0.0_20260107_164430_arm64.deb  sirrah_camera_1.0.0_20260107_165305_arm64.deb  sirrah_camera_1.0.0_20260223_161708_arm64.deb  sirrah_camera_1.0.0_20260223_163348_arm64.deb  sirrah_camera_1.0.0_20260309_104641_arm64.deb  sirrah_camera_1.0.0_20260309_105704_arm64.deb  sirrah_camera_1.0.0_20260309_111600_arm64.deb  sirrah_camera_1.0.0_20260309_112018_arm64.deb  sirrah_camera_1.0.0_20260309_112333_arm64.deb  sirrah_camera_1.0.0_20260309_113436_arm64.deb  sirrah_camera_1.0.0_20260309_114210_arm64.deb  sirrah_camera_1.0.0_20260309_115409_arm64.deb  sirrah_camera_1.0.0_20260309_115944_arm64.deb  sirrah_camera_1.0.0_20260309_122328_arm64.deb  sirrah_camera_1.0.0_20260309_153359_arm64.deb  sirrah_camera_1.0.0_20260309_170342_arm64.deb  sirrah_camera_1.0.0_20260309_171312_arm64.deb  sirrah_camera_1.0.0_20260309_172403_arm64.deb  sirrah_camera_1.0.0_20260309_173010_arm64.deb  sirrah_camera_1.0.0_20260310_094718_arm64.deb  sirrah_camera_1.0.0_20260310_102416_arm64.deb  sirrah_camera_1.0.0_20260310_103023_arm64.deb  sirrah_camera_1.0.0_20260310_103435_arm64.deb  sirrah_camera_1.0.0_20260311_091840_arm64.deb  sirrah_camera_1.0.0_20260311_092034_arm64.deb  sirrah_camera_1.0.0_20260311_092140_arm64.deb  sirrah_camera_1.0.0_20260311_092329_arm64.deb  sirrah_camera_1.0.0_20260311_102206_arm64.deb  sirrah_camera_1.0.0_20260311_105344_arm64.deb  test_param_libcam.cpp  (+1 more)
sirrah_vision-sdiop_dev/Sirrah_Camera/rpi5_cross/project/SIRRAH_CAMERA/data/: configParam.ini
sirrah_vision-sdiop_dev/Sirrah_Camera/rpi5_cross/project/SIRRAH_CAMERA/debian/: arm64-cross.txt  changelog  control  rules
sirrah_vision-sdiop_dev/Sirrah_Camera/rpi5_cross/project/SIRRAH_CAMERA/scripts/: post_install.sh
sirrah_vision-sdiop_dev/__pycache__/: Decalage.cpython-311.pyc.2506104289776
